# cloud-bridge

./: .dockerignore  .gitignore  CALLER_CONTRACT.md  CHAT_EXPORT_INGEST.md  CONTRIBUTING.md  Dockerfile  FEDERATED_PEER_SPIKE.md  FEDERATION_STATES.md  INVARIANTS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SCHEMA_POLICY.md  SPEC.clean.md  SPEC.md  STAFF_GAP_ANALYSIS.md  WORKER_CLOUD_TRANSPORT.md  WORKER_SPEC.md  pyproject.toml
.github/workflows/: ci.yml
bridge/: __init__.py  cli.py  drop_folders.py  inbox.py  steward.py  steward_continuity.py
bridge/api/: __init__.py  app.py
bridge/connectors/: base.py  readonly_mux.py
bridge/core/: consensus.py  envelope.py  routing.py  throttling.py  versioning.py
bridge/federation/: handshake.py  registry.py  transport.py
bridge/ingest/: __init__.py  chat_export.py
bridge/observability/: audit.py  metrics.py
bridge/operator/: __init__.py  console.py  drop_folders.py  inbox.py  projects.py  steward_frontdoor.py  steward_priorities.py  steward_visuals.py
bridge/tests/: test_chat_export_ingest.py  test_cli_runtime.py  test_connectors.py  test_drop_folders.py  test_envelope.py  test_federation.py  test_loops.py  test_observability.py  test_operator_console.py  test_research_writing_workflow.py  test_routing.py  test_simulate_load.py  test_steward_adapter.py  test_steward_continuity.py  test_steward_home_actions.py  test_steward_resume_frontdoor.py  (+9 more)
examples/: chat_export_sample.json  federation_demo.py  golden_path.py  minimal_client.py  single_bridge_demo.py  worker_task.json
tools/: simulate_load.py
(+11 files in other folders)
