[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-bridge"
version = "0.1.0"
description = "Deterministic federated coordination substrate (Instrument + Substrate only)"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]

[tool.ruff]
line-length = 100
target-version = "py311"
