[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-bridge"
version = "0.1.0"
description = "Deterministic federated coordination substrate (Instrument + Substrate only)"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.scripts]
cloud-bridge = "bridge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]

[tool.ruff]
line-length = 100
target-version = "py311"
